# gtdb_downloader

./: .gitignore  README.md  pyproject.toml
gtdb_downloader/: __init__.py  cli.py  config.py  downloader.py  metadata.py
